
syntax = "proto3";

package clients;

option java_package = "com.halloapp.proto.clients";
option java_multiple_files = true;

enum MediaType {
  MEDIA_TYPE_UNSPECIFIED = 0;
  MEDIA_TYPE_IMAGE = 1;
  MEDIA_TYPE_VIDEO = 2;
  MEDIA_TYPE_AUDIO = 3;
}

enum BlobVersion {
  BLOB_VERSION_DEFAULT = 0;
  BLOB_VERSION_CHUNKED = 1;
}

message Media {
  MediaType type = 1;
  int32 width = 2;
  int32 height = 3;
  bytes encryption_key = 4;
  bytes ciphertext_hash = 5;
  string download_url = 6;
  BlobVersion blob_version = 7;
  int32 chunk_size = 8;
  int64 blob_size = 9;
}

message EncryptedResource {
  bytes encryption_key = 1;
  bytes ciphertext_hash = 2;
  string download_url = 3;
}

// Timestamps, ids up in XMPP layer

message Mention {
  int32 index = 1;
  string user_id = 2;
  string name = 3;
}

enum PhoneType {
  PHONE_TYPE_UNSPECIFIED = 0;
  PHONE_TYPE_MOBILE = 1;
  PHONE_TYPE_HOME = 2;
  PHONE_TYPE_WORK = 3;
}

message Phone {
  PhoneType type = 1;
  string number = 2;
}

message Contact {
  string name = 1;
  repeated Phone phones = 2;
}

message SignedPreKey {
  int32 id = 1;
  bytes public_key = 2;
  bytes signature = 3;
}

message OneTimePreKey {
  int32 id = 1;
  bytes public_key = 2;
}

message Background {
  int32 theme = 1;
}

message ChatContainer {
  ChatContext context = 1;
  oneof message {
    Text text = 2;
    Album album = 3;
    ContactCard contact_card = 4;
    VoiceNote voice_note = 5;
  }
}

message ChatContext {
  string feed_post_id = 1;
  int32 feed_post_media_index = 2;
  string chat_reply_message_id = 3;
  int32 chat_reply_message_media_index = 4;
  string chat_reply_message_sender_id = 5;
}

message PostContainer {
  oneof post {
    Text text = 1;
    Album album = 2;
    VoiceNote voice_note = 3;
    Moment moment = 4;
  }
  bytes comment_key = 5;
}

message PostContainerBlob {
  PostContainer post_container = 1;
  int64 uid = 2;
  string post_id = 3;
  int64 timestamp = 4;
  string group_id = 5;
}

message CommentContainer {
  CommentContext context = 1;
  oneof comment {
    Text text = 2;
    Album album = 3;
    VoiceNote voice_note = 4;
  }
}

message CommentContext {
  string feed_post_id = 1;
  string parent_comment_id = 2;
}

message Container {
  PostContainer post_container = 4;
  CommentContainer comment_container = 5;
  ChatContainer chat_container = 6;
}

message Text {
  string text = 1;
  repeated Mention mentions = 2;
  Link link = 3;
}

message ContactCard {
  repeated Contact contacts = 1;
  Text text = 2;
}

message Image {
  EncryptedResource img = 1;
  int32 width = 2;
  int32 height = 3;
}

message StreamingInfo {
  BlobVersion blob_version = 1;
  int32 chunk_size = 2;
  int64 blob_size = 3;
}

message Video {
  EncryptedResource video = 1;
  int32 width = 2;
  int32 height = 3;
  StreamingInfo streaming_info = 4;
}

message AlbumMedia {
  oneof media {
    Image image = 1;
    Video video = 2;
  }
}

message Album {
  repeated AlbumMedia media = 1;
  Text text = 2;
  VoiceNote voice_note = 3;
}

message SenderKey {
  bytes chain_key = 1;
  bytes public_signature_key = 2;
}

message SenderState {
  SenderKey sender_key = 1;
  int32 current_chain_index = 2;
}

message EncryptedPayload {
  oneof payload {
    bytes sender_state_encrypted_payload = 1;
    bytes one_to_one_encrypted_payload = 2;
    bytes comment_key_encrypted_payload = 3;
  }
}

message Moment {
  Image image = 1;
}

message VoiceNote {
  EncryptedResource audio = 1;
}

message Link {
  string url = 1;
  string title = 2;
  string description = 3;
  repeated Image preview = 4;
}


message MemberDetails {
  int64 uid = 1;
  bytes public_identity_key = 2;
}

message PostIdContext {
  string feed_post_id = 1;
  int64 sender_uid = 2;
  int64 timestamp = 3;
}

message CommentIdContext {
  string comment_id = 1;
  string feed_post_id = 2;
  string parent_comment_id = 3;
  int64 sender_uid = 4;
  int64 timestamp = 5;
}

message ContentDetails {
  oneof content_id {
    PostIdContext post_id_context = 1;
    CommentIdContext comment_id_context = 2;
  }
  bytes content_hash = 3;
}


message GroupHistoryPayload {
  repeated MemberDetails member_details = 1;
  repeated ContentDetails content_details = 2;
}

